smart-stock/cloud/cloud-microservices-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-manager
spec:
  replicas: 2
  selector:
    matchLabels:
      app: delivery-manager
  template:
    metadata:
      labels:
        app: delivery-manager
    spec:
      containers:
        - name: delivery-manager
          image: docker.io/sicsix/delivery-manager
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-manager
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-manager
  template:
    metadata:
      labels:
        app: order-manager
    spec:
      containers:
        - name: order-manager
          image: docker.io/sicsix/order-manager
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sales-manager
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sales-manager
  template:
    metadata:
      labels:
        app: sales-manager
    spec:
      containers:
        - name: sales-manager
          image: docker.io/sicsix/sales-manager
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schedule-manager
spec:
  replicas: 2
  selector:
    matchLabels:
      app: schedule-manager
  template:
    metadata:
      labels:
        app: schedule-manager
    spec:
      containers:
        - name: schedule-manager
          image: docker.io/sicsix/schedule-manager
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shelf-manager
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shelf-manager
  template:
    metadata:
      labels:
        app: shelf-manager
    spec:
      containers:
        - name: shelf-manager
          image: docker.io/sicsix/shelf-manager
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-manager
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stock-manager
  template:
    metadata:
      labels:
        app: stock-manager
    spec:
      containers:
        - name: stock-manager
          image: docker.io/sicsix/stock-manager
          ports:
            - containerPort: 3002
