smart-stock/cloud/cloud-mongodb-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-mongodb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-mongodb
  template:
    metadata:
      labels:
        app: cloud-mongodb
    spec:
      containers:
        - name: cloud-mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-data
              mountPath: /data/db
      volumes:
        - name: mongodb-data
          emptyDir: {}
