smart-stock/cloud/cloud-microservices-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: delivery-manager-service
spec:
  selector:
    app: delivery-manager
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: order-manager-service
spec:
  selector:
    app: order-manager
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: sales-manager-service
spec:
  selector:
    app: sales-manager
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: schedule-manager-service
spec:
  selector:
    app: schedule-manager
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: shelf-manager-service
spec:
  selector:
    app: shelf-manager
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: stock-manager-service
spec:
  selector:
    app: stock-manager
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
