smart-stock/cloud/cloud-mongodb-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cloud-mongodb-service
spec:
  selector:
    app: cloud-mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
